<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WritingActivity">

    <!--    <Button-->
    <!--        android:id="@+id/backSelect"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/backSelect_text"-->
    <!--        android:textAppearance="@style/TextAppearance.AppCompat.Large"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--        <ScrollView-->
<!--            android:id="@+id/scrollView"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent">-->

<!--    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:fillViewport="true"-->
<!--        android:layout_weight="1">-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            android:orientation="vertical">-->



<!--        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--            xmlns:tools="http://schemas.android.com/tools"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            tools:context=".MainActivity" >-->


        <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_marginStart="40dp"
        android:onClick="showDatePickerDialog"
        android:text="@string/pick_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/dateText"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_margin="30dp"
        android:gravity="center"
        android:text="@string/no_date"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="#000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/button"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/button" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="6dp"
        android:text="@string/button"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/description"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="245dp"
        android:text="カテゴリー"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />

    <Spinner
        android:id="@+id/spinnerBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:spinnerMode="dialog"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/articleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:text="文章"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <ScrollView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/articleText"
        app:layout_constraintVertical_bias="0.0"
        tools:context=".MainActivity">

        <!--    </ScrollView>-->


    <EditText
        android:id="@+id/articleEdit"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@drawable/black_flame"
        android:ems="10"
        android:gravity="start|top"
        android:hint="20行以内で記入してください"
        android:inputType="textMultiLine"
        android:maxLines="20"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/articleText" />


    </ScrollView>
<!--        </RelativeLayout>-->
<!--        </LinearLayout>-->
<!--    </ScrollView>-->
</androidx.constraintlayout.widget.ConstraintLayout>